--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,16 @@ ul,
 ol {
   list-style: none;
 }
-#things {
+body {
   padding: 20px 10px;
+}
+#things {
+  padding-top: 10px;
+}
+.btn {
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
 }
