--- a/css/index.css
+++ b/css/index.css
@@ -86,16 +86,117 @@ ul,
 ol {
   list-style: none;
 }
+html,
 body {
+  width: 100%;
+  height: 100%;
+}
+body {
+  background: #ffd5d5;
+  font-weight: 700;
+}
+#love-box {
+  width: 100%;
+  height: 100%;
   padding: 20px 10px;
+  box-sizing: border-box;
+  overflow: auto;
+  display: none;
 }
 #things {
   padding-top: 10px;
 }
-.btn {
+.bg {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -99;
+}
+
+label input[type='radio'] {
+  display: none;
+}
+label i,
+label span {
+  vertical-align: middle;
+}
+label i {
   display: inline-block;
-  width: 60px;
-  height: 30px;
-  line-height: 30px;
-  text-align: center;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  background: #ffffff;
+  border: 1px solid #979797;
+  border-radius: 50%;
+  margin-right: 2px;
+}
+label input:checked + i {
+  background: #ec4632;
+  border: 1px solid #ec4632;
+}
+label input:checked + i::after {
+  position: absolute;
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#loading {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  align-content: center;
+}
+
+.flex {
+  min-height: 60pt;
+}
+
+@keyframes loading {
+  0% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0;
+  }
+  25% {
+    height: 4pt;
+    margin-top: 23pt;
+  }
+  50% {
+    width: 4pt;
+  }
+  75% {
+    width: 50pt;
+  }
+  100% {
+    width: 50pt;
+    height: 50pt;
+    margin-top: 0;
+  }
+}
+.loader {
+  width: 50pt;
+  height: 50pt;
+  border-radius: 100%;
+  border: #ffb6b9 4pt solid;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: transparent;
+  -webkit-animation: loading 1s infinite;
+  animation: loading 1s infinite;
 }
