--- a/css/index.css
+++ b/css/index.css
@@ -101,6 +101,7 @@ body {
   padding: 20px 10px;
   box-sizing: border-box;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   display: none;
 }
 #things {
@@ -127,7 +128,7 @@ label i {
   width: 16px;
   height: 16px;
   background: #ffffff;
-  border: 1px solid #979797;
+  border: 1px solid #fff;
   border-radius: 50%;
   margin-right: 2px;
 }
